# pylox

./: pyproject.toml
.trunk/: trunk.yaml
pylox/: __init__.py  ast_formatter.py  cli.py  constants.py  environment.py  errors.py  interpreter.py  lox.py  lox_builtins.py  parser.py  program.py  resolver.py  scanner.py  token.py
pylox/cli/: __init__.py
pylox/nodes/: __init__.py  base.py  expr.py  stmt.py
tests/: test_ast_printer.py  test_interpreter.py  test_keywords.py  test_parser.py  test_pylox.py  test_resolver.py  test_scanner.py
tests/interpreter/: interpreter_test_params.py  test_interpreter.py
tests/parser/: parser_test_params.py  test_parser.py
tests/resources/: __init__.py  fibonacci_for_loop.lox  fibonacci_recursion.lox
