[tool.poetry]
name = "pylox"
version = "0.1.0"
description = ""
authors = ["Adi Gudimella <adgudime@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
rich = "^13.0.1"
igraph = "^0.10.3"
plotly = "^5.11.0"
pytest = "^7.2.0"
pytest-vscodedebug = "^0.1.0"
pytest-icdiff = "^0.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pylox = "pylox.cli:app"
